--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
 
 	<h1><a href=""><img src="img/hi_logo.png" alt="Heart Internet"> Unofficial Status Page</a></h1>
+    <p><strong>Given that I no longer need this service and it's ruining my Github activity history I'm shutting down the service as of: 18th Nov 2016 13:55:06</strong>/<p>
     <p><strong>Heart Internet launched a <a href="https://www.heartinternet.uk/">new website</a> on <a href="https://twitter.com/HeartInternet/status/714864706184355840">29th March 2016</a> with a new and improved <a href="http://www.heartstatus.uk/">status page</a>. They may not keep the old status page updated, and I'm unlikely to re-write the relevant code to scrape the old one anytime soon so the data here may become obsolete and outdated...</strong></p>
     <p><a href="http://www.heartstatus.uk/">Go to the official Status and Maintenance Page</a></p>
 
